(dataset) Dataset search-result metadata v-align fix
Fix etalab/data.gouv.fr#258

--- a/theme/less/components/dataset.less
+++ b/theme/less/components/dataset.less
@@ -178,8 +178,8 @@ Disclaimer : the search-result component is weird in styling and uses a lot of f
 
             display: flex;
             flex-wrap: wrap;
-            align-items: center;
-            padding: @spacing-md;
+            align-items: flex-start;
+            padding: @spacing-md @spacing-xxs;
 
             border-left: 1px solid @grey-100;
 
@@ -189,6 +189,7 @@ Disclaimer : the search-result component is weird in styling and uses a lot of f
                 text-align: right;
 
                 margin-bottom: @spacing-sm;
+                padding: 0 @spacing-xs;
 
                 color: @grey-300;
                 font-size: @font-size-xs;
